--- a/src/App.css
+++ b/src/App.css
@@ -21,5 +21,7 @@
 .sound-button {
   background-color: rgb(208, 208, 208);
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 18px
+  font-size: 18px;
+  height: 50px;
+  width: 250px;
 }
